--- a/_modules/ArmPackManager.html
+++ b/_modules/ArmPackManager.html
@@ -117,7 +117,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">silent</span> <span class="o">=</span> <span class="n">silent</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">counter</span> <span class="o">=</span> <span class="mi">0</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">total</span> <span class="o">=</span> <span class="mi">1</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">index</span> <span class="o">=</span> <span class="bp">None</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_index</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">urls</span> <span class="o">=</span> <span class="bp">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">no_timeouts</span> <span class="o">=</span> <span class="n">no_timeouts</span>
 
@@ -202,7 +202,11 @@
             <span class="n">to_ret</span><span class="p">[</span><span class="s2">&quot;memory&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">([(</span><span class="n">m</span><span class="p">[</span><span class="s2">&quot;id&quot;</span><span class="p">],</span> <span class="nb">dict</span><span class="p">(</span><span class="n">start</span><span class="o">=</span><span class="n">m</span><span class="p">[</span><span class="s2">&quot;start&quot;</span><span class="p">],</span>
                                                     <span class="n">size</span><span class="o">=</span><span class="n">m</span><span class="p">[</span><span class="s2">&quot;size&quot;</span><span class="p">]))</span>
                                      <span class="k">for</span> <span class="n">m</span> <span class="ow">in</span> <span class="n">device</span><span class="p">(</span><span class="s2">&quot;memory&quot;</span><span class="p">)])</span>
-            <span class="n">to_ret</span><span class="p">[</span><span class="s2">&quot;algorithm&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;name&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\\</span><span class="s1">&#39;</span><span class="p">,</span><span class="s1">&#39;/&#39;</span><span class="p">)</span>
+            <span class="n">to_ret</span><span class="p">[</span><span class="s2">&quot;algorithm&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;name&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\\</span><span class="s1">&#39;</span><span class="p">,</span><span class="s1">&#39;/&#39;</span><span class="p">),</span>
+                                       <span class="n">start</span><span class="o">=</span><span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;start&quot;</span><span class="p">],</span>
+                                       <span class="n">size</span><span class="o">=</span><span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;size&quot;</span><span class="p">],</span>
+                                       <span class="n">RAMstart</span><span class="o">=</span><span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;ramstart&quot;</span><span class="p">],</span>
+                                       <span class="n">RAMsize</span><span class="o">=</span><span class="n">device</span><span class="o">.</span><span class="n">algorithm</span><span class="p">[</span><span class="s2">&quot;ramsize&quot;</span><span class="p">])</span>
             <span class="n">to_ret</span><span class="p">[</span><span class="s2">&quot;debug&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">device</span><span class="o">.</span><span class="n">debug</span><span class="p">[</span><span class="s2">&quot;svd&quot;</span><span class="p">]</span>
             <span class="n">to_ret</span><span class="p">[</span><span class="s2">&quot;compile&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span><span class="n">device</span><span class="o">.</span><span class="n">compile</span><span class="p">[</span><span class="s2">&quot;header&quot;</span><span class="p">],</span> <span class="n">device</span><span class="o">.</span><span class="n">compile</span><span class="p">[</span><span class="s2">&quot;define&quot;</span><span class="p">])</span>
         <span class="k">except</span> <span class="p">(</span><span class="ne">KeyError</span><span class="p">,</span> <span class="ne">TypeError</span><span class="p">)</span> <span class="p">:</span>
@@ -211,7 +215,7 @@
 
     <span class="k">def</span> <span class="nf">_generate_index_helper</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">d</span><span class="p">)</span> <span class="p">:</span>
         <span class="k">try</span> <span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">index</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="nb">dict</span><span class="p">([(</span><span class="n">dev</span><span class="p">[</span><span class="s1">&#39;dname&#39;</span><span class="p">],</span> <span class="bp">self</span><span class="o">.</span><span class="n">_extract_dict</span><span class="p">(</span><span class="n">dev</span><span class="p">,</span> <span class="n">d</span><span class="p">))</span> <span class="k">for</span> <span class="n">dev</span> <span class="ow">in</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_index</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="nb">dict</span><span class="p">([(</span><span class="n">dev</span><span class="p">[</span><span class="s1">&#39;dname&#39;</span><span class="p">],</span> <span class="bp">self</span><span class="o">.</span><span class="n">_extract_dict</span><span class="p">(</span><span class="n">dev</span><span class="p">,</span> <span class="n">d</span><span class="p">))</span> <span class="k">for</span> <span class="n">dev</span> <span class="ow">in</span>
                                     <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">pull_from_cache</span><span class="p">(</span><span class="n">d</span><span class="p">)(</span><span class="s2">&quot;device&quot;</span><span class="p">))]))</span>
         <span class="k">except</span> <span class="ne">AttributeError</span> <span class="k">as</span> <span class="n">e</span> <span class="p">:</span>
             <span class="k">print</span><span class="p">(</span><span class="n">e</span><span class="p">)</span>
@@ -228,7 +232,6 @@
 <span class="sd">        :return: A file-like object that, when read, is the ELF file that describes the flashing algorithm</span>
 <span class="sd">        :rtype: ZipExtFile</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">load_index</span><span class="p">()</span>
         <span class="n">device</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">index</span><span class="p">[</span><span class="n">device_name</span><span class="p">]</span>
         <span class="n">pack</span> <span class="o">=</span> <span class="n">ZipFile</span><span class="p">(</span><span class="n">join</span><span class="p">(</span><span class="n">save_data_path</span><span class="p">(</span><span class="s1">&#39;arm-pack-manager&#39;</span><span class="p">),</span>
                             <span class="n">strip_protocol</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">pdsc_to_pack</span><span class="p">(</span><span class="n">device</span><span class="p">[</span><span class="s1">&#39;file&#39;</span><span class="p">]))))</span>
@@ -243,7 +246,6 @@
         <span class="n">stdout</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="nf">find_device</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">match</span><span class="p">)</span> <span class="p">:</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">load_index</span><span class="p">()</span>
         <span class="n">choices</span> <span class="o">=</span> <span class="n">process</span><span class="o">.</span><span class="n">extract</span><span class="p">(</span><span class="n">match</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">index</span><span class="o">.</span><span class="n">keys</span><span class="p">(),</span> <span class="n">limit</span><span class="o">=</span><span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">index</span><span class="p">))</span>
         <span class="n">choices</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">([(</span><span class="n">v</span><span class="p">,</span> <span class="n">k</span><span class="p">)</span> <span class="k">for</span> <span class="n">k</span><span class="p">,</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">choices</span><span class="p">],</span> <span class="n">reverse</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">choices</span> <span class="p">:</span> <span class="k">return</span> <span class="p">[]</span>
@@ -263,13 +265,18 @@
 <span class="sd">        &gt;&gt;&gt; from ArmPackManager import Cache</span>
 <span class="sd">        &gt;&gt;&gt; a = Cache()</span>
 <span class="sd">        &gt;&gt;&gt; a.index[&quot;LPC1768&quot;]</span>
-<span class="sd">        {u&#39;algorithm&#39;: u&#39;Flash/LPC_IAP_512.FLM&#39;,</span>
+<span class="sd">        {u&#39;algorithm&#39;: {u&#39;RAMsize&#39;: u&#39;0x0FE0&#39;,</span>
+<span class="sd">                u&#39;RAMstart&#39;: u&#39;0x10000000&#39;,</span>
+<span class="sd">                u&#39;name&#39;: u&#39;Flash/LPC_IAP_512.FLM&#39;,</span>
+<span class="sd">                u&#39;size&#39;: u&#39;0x80000&#39;,</span>
+<span class="sd">                u&#39;start&#39;: u&#39;0x00000000&#39;},</span>
 <span class="sd">         u&#39;compile&#39;: [u&#39;Device/Include/LPC17xx.h&#39;, u&#39;LPC175x_6x&#39;],</span>
 <span class="sd">         u&#39;debug&#39;: u&#39;SVD/LPC176x5x.svd&#39;,</span>
 <span class="sd">         u&#39;file&#39;: u&#39;http://www.keil.com/pack/Keil.LPC1700_DFP.pdsc&#39;,</span>
 <span class="sd">         u&#39;memory&#39;: {u&#39;IRAM1&#39;: {u&#39;size&#39;: u&#39;0x8000&#39;, u&#39;start&#39;: u&#39;0x10000000&#39;},</span>
 <span class="sd">                     u&#39;IRAM2&#39;: {u&#39;size&#39;: u&#39;0x8000&#39;, u&#39;start&#39;: u&#39;0x2007C000&#39;},</span>
 <span class="sd">                     u&#39;IROM1&#39;: {u&#39;size&#39;: u&#39;0x80000&#39;, u&#39;start&#39;: u&#39;0x00000000&#39;}}}</span>
+
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_index</span> <span class="p">:</span>
